made it so the item actually gets added in lol

--- a/UrnofSouls_EquipmentItem/UrnofSouls_EquipmentItem.csproj
+++ b/UrnofSouls_EquipmentItem/UrnofSouls_EquipmentItem.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <Compile Remove="Artifact\ExampleArtifact.cs" />
+    <Compile Remove="Equipment\ExampleEquipment.cs" />
     <Compile Remove="Items\ExampleItem.cs" />
   </ItemGroup>
 
